RESOLVED FIXED153128
Fix the --minimal build due to missing VM.h include
https://bugs.webkit.org/show_bug.cgi?id=153128
Summary Fix the --minimal build due to missing VM.h include
Csaba Osztrogonác
Reported 2016-01-15 07:44:36 PST
EFL --minimal build is broken now: In file included from ../../Source/WebCore/bindings/js/JSDOMGlobalObject.h:31:0, from ../../Source/WebCore/bindings/js/JSDOMWrapper.h:25, from DerivedSources/WebCore/JSNode.h:24, from DerivedSources/WebCore/JSCharacterData.h:25, from ../../Source/WebCore/bindings/js/JSCharacterDataCustom.cpp:27: ../../Source/WebCore/bindings/js/WebCoreJSBuiltinInternals.h:51:48: error: expected ')' before '&' token In file included from ../../Source/WebCore/bindings/js/JSDOMGlobalObject.h:31:0, from ../../Source/WebCore/bindings/js/JSDOMWrapper.h:25, from DerivedSources/WebCore/JSNode.h:24, from DerivedSources/WebCore/JSCharacterData.h:25, from ../../Source/WebCore/bindings/js/JSCharacterDataCustom.cpp:27: ../../Source/WebCore/bindings/js/WebCoreJSBuiltinInternals.h:63:46: error: 'JSC::VM' has not been declared ../../Source/WebCore/bindings/js/WebCoreJSBuiltinInternals.h:66:10: error: 'VM' in namespace 'JSC' does not name a type In file included from ../../Source/WebCore/bindings/js/JSDOMWrapper.h:25:0, from DerivedSources/WebCore/JSNode.h:24, from DerivedSources/WebCore/JSCharacterData.h:25, from ../../Source/WebCore/bindings/js/JSCharacterDataCustom.cpp:27: ../../Source/WebCore/bindings/js/JSDOMGlobalObject.h:92:21: error: prototype for 'void WebCore::JSBuiltinInternalFunctions::initialize(WebCore::JSDOMGlobalObject&, JSC::VM&)' does not match any in class 'WebCore::JSBuiltinInternalFunctions' In file included from ../../Source/WebCore/bindings/js/JSDOMGlobalObject.h:31:0, from ../../Source/WebCore/bindings/js/JSDOMWrapper.h:25, from DerivedSources/WebCore/JSNode.h:24, from DerivedSources/WebCore/JSCharacterData.h:25, from ../../Source/WebCore/bindings/js/JSCharacterDataCustom.cpp:27: ../../Source/WebCore/bindings/js/WebCoreJSBuiltinInternals.h:63:10: error: candidate is: void WebCore::JSBuiltinInternalFunctions::initialize(WebCore::JSDOMGlobalObject&, int&)
Attachments
Patch (1.17 KB, patch)
2016-01-15 07:46 PST, Csaba Osztrogonác
no flags
Patch (1.18 KB, patch)
2016-01-15 08:20 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-01-15 07:46:09 PST
Csaba Osztrogonác
Comment 2 2016-01-15 08:20:35 PST
Michael Catanzaro
Comment 3 2016-01-15 14:48:03 PST
Comment on attachment 269054 [details] Patch Feel empowered to commit build fixes without review.
WebKit Commit Bot
Comment 4 2016-01-18 05:27:27 PST
Comment on attachment 269054 [details] Patch Clearing flags on attachment: 269054 Committed r195219: <http://trac.webkit.org/changeset/195219>
WebKit Commit Bot
Comment 5 2016-01-18 05:27:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.