Fix the --minimal build due to missing VM.h include https://bugs.webkit.org/show_bug.cgi?id=153128

Reviewed by Michael Catanzaro.

* bindings/js/WebCoreJSBuiltinInternals.h:


Canonical link: https://commits.webkit.org/171272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195219 268f45cc-cd09-0410-ab3c-d52691b4dbfc